wk_taa_taaqa/src/objects/Market_Sub_Segment_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Market Sub Segment Mapping</description>
    <fields>
        <fullName>GTE_AnnualRevenue__c</fullName>
        <description>GTE - greater than or equal</description>
        <label>GTE_AnnualRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GTE_NumberOfEmployees__c</fullName>
        <description>GTE - greater than or equal</description>
        <label>GTE_NumberOfEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTE_AnnualRevenue__c</fullName>
        <description>LTE - less than or equall</description>
        <label>LTE_AnnualRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTE_NumberOfEmployees__c</fullName>
        <description>LTE - less than or equal</description>
        <label>LTE_NumberOfEmployees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Market Sub Segment Mapping</label>
</CustomObject>